# tg-bot

./: .env  bot.py  nick_parser.py  pyproject.toml  requirements  requirements.txt  translate.py
