[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anyio==4.13.0",
    "beautifulsoup4==4.14.3",
    "cloudscraper==1.2.71",
    "curl-cffi==0.15.0",
    "playwright==1.58.0",
    "python-dotenv==1.2.2",
    "python-telegram-bot>=22.5",
    "python-telegram-bot[job-queue]",
    "requests==2.33.1",
    "undetected-chromedriver>=3.5.5",
]
