[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anyio==4.13.0",
    "curl-cffi==0.15.0",
    "python-dotenv==1.2.2",
    "python-telegram-bot>=22.5",
    "python-telegram-bot[job-queue]",
    "requests==2.33.1",
    "tzdata==2026.1",
]
